<resources>
    <string name="app_name">Kalpoli</string>
    <string name="login">Entrar</string>
    <string name="mail">Correo</string>
    <string name="password">Contraseña</string>
    <string name="register">Registrar</string>
    <string name="containerForm">containerformtransition</string>
    <string name="validate">Validar</string>
    <string name="item_report_title_transitionname">itemreporttitletransition</string>
    <string name="report_title_transitionname">reportTitleTransitionName</string>
    <string name="item_report_status_transitionname">itemreportstatustransition</string>
    <string name="lorem_ipsum_cook">I continue cooking, you and I both forget about Pinkman. We forget this ever happened. We consider this a lone hiccup in an otherwise long and fruitful business arrangement. I prefer Option B. He\'ll live. I asked to see you in order to... clear the air. There are uh, some... issues that could cause a misunderstanding between us and I think it\'s in our best interest to lay the cards on the table. My brother-in-law, moments before he was attacked, someone called to warn him. I believe that same person was protecting me.</string>
</resources>
