<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chilangolabs.hackcicm.activitys.RegisterFormActivity">

    <ImageView
        android:id="@+id/imgRegisterLogo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_app_min"
        android:transitionName="imagetransitionname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.chilangolabs.hackcicm.customelements.MontserratTextView
        android:id="@+id/txtRegisterTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorAccent"
        android:transitionName="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgRegisterLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardRegisterForm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:transitionName="@string/containerForm"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <com.chilangolabs.hackcicm.customelements.MontserratEditText
                    android:id="@+id/edtxRegisterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nombre"
                    app:fontM="Light" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.chilangolabs.hackcicm.customelements.MontserratEditText
                    android:id="@+id/edtxRegisterLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Apellido"
                    app:fontM="Light" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.chilangolabs.hackcicm.customelements.MontserratEditText
                    android:id="@+id/edtxRegisterEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Edad"
                    app:fontM="Light" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.chilangolabs.hackcicm.customelements.MontserratEditText
                    android:id="@+id/edtxRegisterEstado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Estado"
                    app:fontM="Light" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.chilangolabs.hackcicm.customelements.MontserratEditText
                    android:id="@+id/edtxRegisterCP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Codigo Postal"
                    app:fontM="Light" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.chilangolabs.hackcicm.customelements.MontserratEditText
                    android:id="@+id/edtxRegisterColonia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Colonia"
                    app:fontM="Light" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.chilangolabs.hackcicm.customelements.MontserratEditText
                    android:id="@+id/edtxRegisterStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Calle"
                    app:fontM="Light" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.chilangolabs.hackcicm.customelements.MontserratButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/cbbxTerms"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginStart="36dp"
                    android:background="@drawable/bg_button_blue_gradient"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:fontM="Light" />

                <CheckBox
                    android:id="@+id/cbbxTerms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/cbbxAvisoPrivacidad"
                    android:text="Terminos y Condiciones" />

                <CheckBox
                    android:id="@+id/cbbxAvisoPrivacidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="Aviso de Privacidad" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
